syntax = "proto3";

package quarkus.test;

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "io.quarkus.test";

service TestService {
  rpc Create(TestRequest) returns (TestResponse) {
    option (google.api.http) = {
      post: "/create";
      body: "*"
    };
  }
}

message TestRequest {
  string name = 1;
}

message TestResponse {
  string id = 1;
}
